osms/kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reactsvc
#  namespace: corecrud
  labels:
    app: reactsvc
spec:
  selector:
    matchLabels:
      app: reactsvc
  template:
    metadata:
      labels:
        app: reactsvc
    spec:
      serviceAccountName: mysvcs-reactsvc
      containers:
      - name: reactsvc
        image: srranjan/reactsvccrud:latest
        #The above for local kind repos, the below the general public one
        #       image: docker.io/srranjan/reactsvccrud:latest
        imagePullPolicy: IfNotPresent
        resources: {}
        ports:
        - containerPort: 9095
        volumeMounts:
         - name: config
           mountPath: /config
         - name: my-secrets
           mountPath: /secrets
      volumes:
       - name: config
         configMap:
           name: my-config
       - name: my-secrets
         secret:
           secretName: my-creds
status: {}
