osms/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reactsvc
#  namespace: corecrud
  labels:
    app: reactsvc
    service: reactsvc
spec:
  selector:
    app: reactsvc
#    service: reactsvc
#    type: api
#  type: LoadBalancer
#  type: ClusterIP
# Most probably, for standalone testing in Minikube, the following Nodeport will be used, but for Istio gateway based testing, this will remain commented. Most probably, the default is the above cluseterIP.
# This nodePort: 30005 added to ensure whether I can have a node port that is known beforehand, and works with typt Nodeport only
# Hint for quick service testing using nodeport method: $(minikube ip):$NODE_PORT
#  type: NodePort   
  ports:
  - port: 9095
    name: 9095-http
#    nodePort: 30005      # To be used only with NodePort, not for the default ClusterIP
    protocol: TCP
    targetPort: 9095
  sessionAffinity: None
  type: ClusterIP
#status:
#  loadBalancer: {}
